# procurement-portal-backend

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  app.json  demodata.json  docker-compose.yml  manage.py  package.json  pyproject.toml  template.xlsx
dataset-uploads/: Demo_dataset_1-2020-09-19T184114.321272.csv  Demo_dataset_2-2020-09-19T184305.033356.csv  Demo_dataset_3-2020-09-19T184415.967019.csv
procurement_portal/: settings.py  signals.py  test.py  urls.py  wsgi.py
procurement_portal/records/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tests.py  validators.py  views.py
procurement_portal/records/migrations/: 0001_initial.py  0002_add_searchvectorfield.py  0003_auto_20200913_1229.py  0004_add_fields_to_searchvectorfield.py  0005_auto_20200913_1344.py  0006_auto_20200920_1637.py  0007_fix_supplier_full_text_content_update.py  0008_auto_20200928_2111.py  0009_auto_20200928_2116.py  0010_auto_20200928_2118.py  0011_purchaserecord_bbbee_status.py  0012_auto_20200928_2212.py  0013_auto_20201012_0526.py  0014_auto_20201012_0642.py  0015_auto_20201012_0939.py  0016_auto_20201012_0943.py  0017_auto_20201017_1250.py  0017_auto_20201024_1438.py  0018_add_supplier_numbers.py  0019_auto_20201108_0729.py  0020_auto_20201108_0753.py  0021_auto_20201108_1826.py
procurement_portal/templates/: base.html  index.html
procurement_portal_backend/: settings.py  test.py  urls.py  wsgi.py
procurement_portal_backend/records/: apps.py  tests.py
procurement_portal_backend/templates/: base.html  index.html
(+2 files in other folders)
