[tool.poetry]
name = "procurement-portal-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.1"
django-environ = "^0.4.5"
werkzeug = "^1.0.1"
whitenoise = "^5.2.0"
sentry-sdk = "^0.17.6"
django-extensions = "^3.0.9"
pytest-cov = "^2.10.1"
html5lib = "^1.1"
codecov = "^2.1.9"
gunicorn = "^20.0.4"
djangorestframework = "^3.11.1"
gevent = "^20.6.2"
django-storages = "^1.10.1"
django-filter = "^2.3.0"
django-import-export = "^2.3.0"
psycopg2 = "^2.8.6"
boto3 = "^1.15.2"
django-cors-headers = "3.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
